--- a/packages/frontend/src/i18n/locales/hi.json
+++ b/packages/frontend/src/i18n/locales/hi.json
@@ -17,6 +17,9 @@
   "quickSlip": {
     "title": "नई स्लिप बना रहे हैं...",
     "customerName": "ग्राहक का नाम (वैकल्पिक)",
+    "itemNamePlaceholder": "आइटम का नाम या विवरण दर्ज करें",
+    "qtyPlaceholder": "मात्रा (उदा. 1)",
+    "pricePlaceholder": "प्रति आइटम मूल्य (उदा. 9.99)",
     "tableHeaders": {
       "srNo": "क्र.सं.",
       "itemName": "वस्तु का नाम",
@@ -85,7 +88,8 @@
     "error": "एक त्रुटि हुई",
     "noMatch": "कोई मिलान नहीं मिला। दर्ज करने के लिए एंटर दबाएं",
     "loading": "सुझाव लोड हो रहे हैं...",
-    "voiceError": "आवाज इनपुट को प्रोसेस करने में विफल। कृपया पुनः प्रयास करें।"
+    "voiceError": "आवाज इनपुट को प्रोसेस करने में विफल। कृपया पुनः प्रयास करें।",
+    "voiceUnsupported": "इस ब्राउज़र में वॉयस रिकॉर्डिंग समर्थित नहीं है।"
   },
 
   "priceBoard": {
